--- a/css/custom.css
+++ b/css/custom.css
@@ -17,10 +17,20 @@
   padding-bottom: 12%;
 }
 
+.run2-hidden {
+  display:none;
+}
+
+.hide-element {
+  display: none;
+}
+
 #run2{
   position:relative;
   left:100px;
   top:-300px;
+  background-color:lightgrey;
+  width:400px;
 }
 .jumbotron2{
   background: url('../images/bg2.jpg') no-repeat;
@@ -36,14 +46,18 @@
     border-radius: 10px;
 }
 .section5{
-  background-color:grey;
+  background-color:white;
   height:400px;
 }
 #f1 {
+  display:flex;
+  flex-direction: column;
   text-align: center;
 }
 
 #f2 {
+  display:flex;
+  flex-direction: column;
   text-align: center;
 }
 
